<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/usr_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_img" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userMail"
        android:layout_marginTop="3dp"
        android:textColor="@color/text_mdm2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/profile_options_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email">

        <LinearLayout
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="#ECECEC"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/privacy_icon"
                    android:src="@drawable/ic_privacy" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="14dp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/privacy"
            app:layout_constraintStart_toStartOf="@+id/privacy"
            app:layout_constraintTop_toBottomOf="@+id/privacy">

            <androidx.cardview.widget.CardView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="#ECECEC"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/help_support_icon"
                    android:src="@drawable/ic_help" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/help_and_support"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/help"
            app:layout_constraintStart_toStartOf="@+id/help"
            app:layout_constraintTop_toBottomOf="@+id/help">

            <androidx.cardview.widget.CardView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="#ECECEC"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/rate_app_icon"
                    android:src="@drawable/ic_rate" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/rate_our_app"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1">

            <androidx.cardview.widget.CardView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="#ECECEC"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/settings_icon"
                    android:src="@drawable/ic_settings"
                    app:tint="#5B5B5B" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/rate"
            app:layout_constraintStart_toStartOf="@+id/rate"
            app:layout_constraintTop_toBottomOf="@+id/rate">

            <androidx.cardview.widget.CardView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="#ECECEC"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/invite_friend_icon"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_invite" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/invite_a_friend"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#353535"
            app:layout_constraintEnd_toEndOf="@+id/invite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invite" />

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/line2"
            app:layout_constraintStart_toStartOf="@+id/line2"
            app:layout_constraintTop_toBottomOf="@+id/line2">

            <androidx.cardview.widget.CardView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/card_view_bg"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logout_icon"
                    android:src="@drawable/ic_power_off" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/logout"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_arrow_right"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>